@@ -228,6 +228,11 @@ if you want to draw on the screen directly use @code{x-draw-text}
 The @code{old-window-menu} was replaced by @code{beos-window-menu}
 a long time ago in version 0.28.1. Now it is reomved.
 
+@item @code{3d-hack} [Christopher Bratusek]
+
+The @code{3d-hack} module provides two functions similar to @code{glxgears},
+rendered in 2d. Practically it's of no use, therefore it's gone now.
+
 @item @code{test-widget} function [Christopher Bratusek]
 
 The @code{test-widget} function is heavily broken and crashes Sawfish
