@@ -2,6 +2,8 @@
 	* lisp/sawfish/wm/ext/old-window-menu.jl: removed. it has been replaced
 	by beos-window-menu in version 0.28.1
 
+	* lisp/sawfish/wm/ext/3d-hack.jl: removed.
+
 2010-09-18  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widgets/simple-dialog.jl: renamed sawfish.gtk.stock
 	to sawfish.gtk.widgets.simple-dialog as the functions `about-dialog'
